# github-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  _client.py  gh.py  main.py  server.py
src/gh/: __init__.py  config.py  guards.py  request.py  types.py
src/tools/: __init__.py  actions.py  commits.py  files.py  issues.py  pulls.py  repos.py  search.py  users.py
